--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "ava": "^0.18.1",
     "eslint-config-tidy": "^0.4.0",
-    "xo": "^0.17.1"
+    "xo": "^0.18.0"
   },
   "keywords": [
     "engine",
@@ -49,7 +49,9 @@
     "bin-version",
     "check",
     "assert",
-    "test"
+    "test",
+    "compatible",
+    "semver"
   ],
   "xo": {
     "extend": "tidy"
